# chiplab

./: .editorconfig  .gitignore  .mcp.json  AGENTS.md  LICENSE  README.md  glama.json  package-lock.json  package.json  supported-boards.md
.cursor/rules/: chiplab.mdc
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  request.yml
.github/workflows/: build-examples.yml  docs-checks.yml
docs/: docs.json  introduction.mdx  quickstart.mdx
docs/agents/: claude-code.mdx  claude-desktop.mdx  codex.mdx  cursor.mdx  opencode.mdx  overview.mdx  vs-code.mdx
docs/hardware/: boards.mdx
docs/platform/: api-keys.mdx  usage.mdx
docs/tools/: ask.md  ask.mdx  overview.mdx  run.mdx
examples/bare-metal/: AGENTS.md  README.md
examples/bare-metal/nrf52840-dk/: Cargo.toml  memory.x
examples/bare-metal/nrf52840-dk/src/: main.rs
examples/bare-metal/stm32f103-blue-pill/: Cargo.toml  memory.x
examples/bare-metal/stm32f103-blue-pill/src/: main.rs
examples/bare-metal/stm32f4-discovery/: Cargo.toml  build.rs  memory.x
examples/bare-metal/stm32f4-discovery/src/: main.rs
examples/bare-metal/stm32f7-discovery/: Cargo.toml
examples/bare-metal/stm32f7-discovery/src/: main.rs
examples/bare-metal/stm32h745-nucleo/: Cargo.toml  memory.x
examples/bare-metal/stm32h745-nucleo/src/: main.rs
examples/bare-metal/stm32l073-nucleo/: Cargo.toml  memory.x
examples/bare-metal/stm32l073-nucleo/src/: main.rs
examples/embassy-rust/: AGENTS.md  README.md
examples/embassy-rust/nrf52840-dk/: Cargo.toml  build.rs
examples/embassy-rust/nrf52840-dk/src/: main.rs
examples/embassy-rust/stm32f103-blue-pill/: Cargo.toml
examples/embassy-rust/stm32f103-blue-pill/src/: main.rs
examples/embassy-rust/stm32f4-discovery/: Cargo.toml
examples/embassy-rust/stm32f4-discovery/src/: main.rs
examples/embassy-rust/stm32f7-discovery/: Cargo.toml
examples/embassy-rust/stm32f7-discovery/src/: main.rs
examples/embassy-rust/stm32l073-nucleo/: Cargo.toml
examples/embassy-rust/stm32l073-nucleo/src/: main.rs
examples/embassy-rust/stm32wba52-nucleo/: Cargo.toml  build.rs
examples/embassy-rust/stm32wba52-nucleo/src/: main.rs
examples/freertos/: AGENTS.md  README.md
examples/freertos/stm32f4-discovery/: Makefile
examples/freertos/stm32f4-discovery/src/: FreeRTOSConfig.h  linker.ld  main.c  startup_stm32f407.s
examples/zephyr-os/: AGENTS.md  README.md
examples/zephyr-os/nrf52840-dk/: CMakeLists.txt  prj.conf  west.yml
examples/zephyr-os/nrf52840-dk/src/: main.c
